@@ -74,26 +74,6 @@ name|java
 operator|.
 name|io
 operator|.
-name|InputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|OutputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
 name|RandomAccessFile
 import|;
 end_import
@@ -134,6 +114,18 @@ begin_import
 import|import
 name|java
 operator|.
+name|nio
+operator|.
+name|channels
+operator|.
+name|FileChannel
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Map
@@ -149,20 +141,6 @@ operator|.
 name|concurrent
 operator|.
 name|ConcurrentHashMap
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|commons
-operator|.
-name|io
-operator|.
-name|FileUtils
 import|;
 end_import
 
@@ -244,9 +222,9 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|fs
+name|io
 operator|.
-name|Path
+name|IOUtils
 import|;
 end_import
 
@@ -2957,7 +2935,7 @@ name|initialized
 init|=
 literal|false
 decl_stmt|;
-comment|/**    * The Windows logon name has two part, NetBIOS domain name and    * user account name, of the format DOMAIN\UserName. This method    * will remove the domain part of the full logon name.    *    * @param the full principal name containing the domain    * @return name with domain removed    */
+comment|/**    * The Windows logon name has two part, NetBIOS domain name and    * user account name, of the format DOMAIN\UserName. This method    * will remove the domain part of the full logon name.    *    * @param Fthe full principal name containing the domain    * @return name with domain removed    */
 DECL|method|stripDomain (String name)
 specifier|private
 specifier|static
@@ -3776,7 +3754,7 @@ parameter_list|)
 throws|throws
 name|NativeIOException
 function_decl|;
-comment|/**    * Unbuffered file copy from src to dst without tainting OS buffer cache    * In Linux, it uses sendfile() which uses O_DIRECT flag internally    * In Windows, it uses CopyFileEx with COPY_FILE_NO_BUFFERING flag    *    * Note: This does not support FreeBSD/OSX which have a different sendfile()    * semantic. Also, this simple native wrapper does minimal parameter checking    * It is recommended to use wrapper function like    * the Storage#nativeCopyFileUnbuffered() function in hadoop-hdfs.    *    *    * @param src                  The source path    * @param dst                  The destination path    * @throws IOException    */
+comment|/**    * Unbuffered file copy from src to dst without tainting OS buffer cache    *    * In POSIX platform:    * It uses FileChannel#transferTo() which internally attempts    * unbuffered IO on OS with native sendfile64() support and falls back to    * buffered IO otherwise.    *    * It minimizes the number of FileChannel#transferTo call by passing the the    * src file size directly instead of a smaller size as the 3rd parameter.    * This saves the number of sendfile64() system call when native sendfile64()    * is supported. In the two fall back cases where sendfile is not supported,    * FileChannle#transferTo already has its own batching of size 8 MB and 8 KB,    * respectively.    *    * In Windows Platform:    * It uses its own native wrapper of CopyFileEx with COPY_FILE_NO_BUFFERING    * flag, which is supported on Windows Server 2008 and above.    *    * Ideally, we should use FileChannel#transferTo() across both POSIX and Windows    * platform. Unfortunately, the wrapper(Java_sun_nio_ch_FileChannelImpl_transferTo0)    * used by FileChannel#transferTo for unbuffered IO is not implemented on Windows.    * Based on OpenJDK 6/7/8 source code, Java_sun_nio_ch_FileChannelImpl_transferTo0    * on Windows simply returns IOS_UNSUPPORTED.    *    * Note: This simple native wrapper does minimal parameter checking before copy and    * consistency check (e.g., size) after copy.    * It is recommended to use wrapper function like    * the Storage#nativeCopyFileUnbuffered() function in hadoop-hdfs with pre/post copy    * checks.    *    * @param src                  The source path    * @param dst                  The destination path    * @throws IOException    */
 DECL|method|copyFileUnbuffered (File src, File dst)
 specifier|public
 specifier|static
@@ -3794,19 +3772,11 @@ name|IOException
 block|{
 if|if
 condition|(
-operator|(
 name|nativeLoaded
-operator|)
 operator|&&
-operator|(
 name|Shell
 operator|.
 name|WINDOWS
-operator|||
-name|Shell
-operator|.
-name|LINUX
-operator|)
 condition|)
 block|{
 name|copyFileUnbuffered0
@@ -3825,15 +3795,145 @@ expr_stmt|;
 block|}
 else|else
 block|{
-name|FileUtils
-operator|.
-name|copyFile
+name|FileInputStream
+name|fis
+init|=
+literal|null
+decl_stmt|;
+name|FileOutputStream
+name|fos
+init|=
+literal|null
+decl_stmt|;
+name|FileChannel
+name|input
+init|=
+literal|null
+decl_stmt|;
+name|FileChannel
+name|output
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|fis
+operator|=
+operator|new
+name|FileInputStream
 argument_list|(
 name|src
-argument_list|,
+argument_list|)
+expr_stmt|;
+name|fos
+operator|=
+operator|new
+name|FileOutputStream
+argument_list|(
 name|dst
 argument_list|)
 expr_stmt|;
+name|input
+operator|=
+name|fis
+operator|.
+name|getChannel
+argument_list|()
+expr_stmt|;
+name|output
+operator|=
+name|fos
+operator|.
+name|getChannel
+argument_list|()
+expr_stmt|;
+name|long
+name|remaining
+init|=
+name|input
+operator|.
+name|size
+argument_list|()
+decl_stmt|;
+name|long
+name|position
+init|=
+literal|0
+decl_stmt|;
+name|long
+name|transferred
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+name|remaining
+operator|>
+literal|0
+condition|)
+block|{
+name|transferred
+operator|=
+name|input
+operator|.
+name|transferTo
+argument_list|(
+name|position
+argument_list|,
+name|remaining
+argument_list|,
+name|output
+argument_list|)
+expr_stmt|;
+name|remaining
+operator|-=
+name|transferred
+expr_stmt|;
+name|position
+operator|+=
+name|transferred
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|output
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|fos
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|input
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|fis
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 DECL|method|copyFileUnbuffered0 (String src, String dst)
