@@ -3534,7 +3534,7 @@ argument_list|)
 throw|;
 block|}
 block|}
-comment|/**    * Copies a file (usually large) to a new location using native unbuffered IO.    *<p>    * This method copies the contents of the specified source file    * to the specified destination file using OS specific unbuffered IO.    * The goal is to avoid churning the file system buffer cache when copying    * large files. TheFileUtils#copyLarge function from apache-commons-io library    * can be used to achieve this with an internal memory buffer but is less    * efficient than the native unbuffered APIs such as sendfile() in Linux and    * CopyFileEx() in Windows wrapped in {@link NativeIO#copyFileUnbuffered}.    *    * The directory holding the destination file is created if it does not exist.    * If the destination file exists, then this method will delete it first.    *<p>    *<strong>Note:</strong> Setting<code>preserveFileDate</code> to    * {@code true} tries to preserve the file's last modified    * date/times using {@link File#setLastModified(long)}, however it is    * not guaranteed that the operation will succeed.    * If the modification operation fails, no indication is provided.    *    * @param srcFile  an existing file to copy, must not be {@code null}    * @param destFile  the new file, must not be {@code null}    * @param preserveFileDate  true if the file date of the copy    *  should be the same as the original    *    * @throws NullPointerException if source or destination is {@code null}    * @throws IOException if source or destination is invalid    * @throws IOException if an IO error occurs during copying    */
+comment|/**    * Copies a file (usually large) to a new location using native unbuffered IO.    *<p>    * This method copies the contents of the specified source file    * to the specified destination file using OS specific unbuffered IO.    * The goal is to avoid churning the file system buffer cache when copying    * large files.    *    * We can't use FileUtils#copyFile from apache-commons-io because it    * is a buffered IO based on FileChannel#transferFrom, which uses MmapByteBuffer    * internally.    *    * The directory holding the destination file is created if it does not exist.    * If the destination file exists, then this method will delete it first.    *<p>    *<strong>Note:</strong> Setting<code>preserveFileDate</code> to    * {@code true} tries to preserve the file's last modified    * date/times using {@link File#setLastModified(long)}, however it is    * not guaranteed that the operation will succeed.    * If the modification operation fails, no indication is provided.    *    * @param srcFile  an existing file to copy, must not be {@code null}    * @param destFile  the new file, must not be {@code null}    * @param preserveFileDate  true if the file date of the copy    *  should be the same as the original    *    * @throws NullPointerException if source or destination is {@code null}    * @throws IOException if source or destination is invalid    * @throws IOException if an IO error occurs during copying    */
 DECL|method|nativeCopyFileUnbuffered (File srcFile, File destFile, boolean preserveFileDate)
 specifier|public
 specifier|static
