@@ -1301,6 +1301,9 @@ Release 2.6.0 - UNRELEASED
     HDFS-6934. Move checksum computation off the hot path when writing to RAM
     disk. (cnauroth)
 
+    HDFS-7291. Persist in-memory replicas with appropriate unbuffered copy API
+    on POSIX and Windows. (Xiaoyu Yao via cnauroth)
+
 Release 2.5.1 - 2014-09-05
 
   INCOMPATIBLE CHANGES
